# AIStockAnalysis

./: .gitignore  README.md  app.py  index.html  preview.html  pyproject.toml  requirements.txt
configs/: data_sources.personal.toml  pipeline.personal.toml
data/: offline_data.json
docs/: agent_system_blueprint.md  data_source_strategy.md  execution_roadmap.md  master_plan.md  module_breakdown.md  phase0_charter.md  phase0_preview.md  phase1_data_foundation_preview.md  phase2_industry_sentiment_risk_preview.md  phase3_portfolio_automation_preview.md  planning_stage_closeout.md
docs/phase0/: module01_charter_success_metrics.md  module02_data_inventory_access_plan.md  module03_tech_stack_security_baseline.md  module04_governance_playbook.md  signoff_log.md
scripts/: app.js
src/agents/: __init__.py  base.py  company.py  industry.py  macro.py  policy.py  portfolio.py  risk.py
src/aistockanalysis/: __init__.py  config.py  main.py
src/data_providers/: __init__.py  base.py  synthetic.py
src/examples/: __init__.py  company_analyst_preview.py  industry_mapper_preview.py  macro_sentinel_preview.py  personal_pipeline.py  policy_watcher_preview.py  portfolio_strategist_preview.py  risk_controller_preview.py
static/: styles.css
styles/: main.css
templates/: index.html
tests/: conftest.py  test_company_agent.py  test_data_sources.py  test_industry_agent.py  test_macro_agent.py  test_orchestrator.py  test_pipeline_executor.py  test_pipeline_planner.py  test_pipeline_runtime.py  test_policy_agent.py  test_portfolio_agent.py  test_risk_agent.py  test_web_server.py
(+18 files in other folders)
