[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aistockanalysis"
version = "0.1.0"
description = "Modular AI-driven stock analysis platform blending macro to micro insights."
authors = [
  {name = "AI Developer"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.22",
  "httpx>=0.24",
  "pandas>=2.0",
  "numpy>=1.25",
  "sqlalchemy>=2.0",
  "langchain>=0.1",
  "scikit-learn>=1.3"
]

[tool.setuptools.packages.find]
where = ["src"]
